--- a/index.html
+++ b/index.html
@@ -18,24 +18,25 @@
         }
 
         #joystick-container {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  width: 120px;
-  height: 120px;
-  background: rgba(0, 0, 0, 0.5);
-  border-radius: 50%;
-  touch-action: none;
-}
+            position: absolute;
+            bottom: 20px;
+            left: 20px;
+            width: 120px;
+            height: 120px;
+            background: rgba(0, 0, 0, 0.5);
+            border-radius: 50%;
+            touch-action: none;
+        }
 
-#joystick {
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  background: rgba(255, 255, 255, 0.8);
-  border-radius: 50%;
-  transform: translate(-50%, -50%);
-}
+        #joystick {
+            position: absolute;
+            width: 60px;
+            height: 60px;
+            background: rgba(255, 255, 255, 0.8);
+            border-radius: 50%;
+            transform: translate(-50%, -50%);
+        }
+
 
     </style>
 </head>
@@ -48,6 +49,7 @@
 
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.min.js"></script>
+
 
     <script type="importmap">
       {
@@ -374,6 +376,24 @@
                 this.spriteManager.loadSprite("player", 0, 0, 0.1, 0.1); // load the player sprite from the sprite sheet
                 this.player = new Player(this.spriteManager);
                 this.zombie = new Zombie();
+
+
+                          // Create a variable to store joystick data
+                          this.joystickData = {
+                    active: false,
+                    startX: 0,
+                    startY: 0,
+                    currentX: 0,
+                    currentY: 0,
+                };
+
+                // Add touch event listeners to the joystick container
+                const joystickContainer = document.getElementById("joystick-container");
+                joystickContainer.addEventListener("touchstart", this.handleTouchStart.bind(this));
+                joystickContainer.addEventListener("touchmove", this.handleTouchMove.bind(this));
+                joystickContainer.addEventListener("touchend", this.handleTouchEnd.bind(this));
+
+
             }
 
             update() {
@@ -384,6 +404,67 @@
                 requestAnimationFrame(this.update.bind(this));
 
             }
+
+            
+            handleTouchStart(event) {
+                event.preventDefault();
+                const touch = event.touches[0];
+                const joystick = document.getElementById("joystick");
+                const joystickRect = joystick.getBoundingClientRect();
+
+                this.joystickData.active = true;
+                this.joystickData.startX = touch.clientX;
+                this.joystickData.startY = touch.clientY;
+                this.joystickData.currentX = this.joystickData.startX;
+                this.joystickData.currentY = this.joystickData.startY;
+
+                joystick.style.left = `${this.joystickData.startX - joystickRect.width / 2}px`;
+                joystick.style.top = `${this.joystickData.startY - joystickRect.height / 2}px`;
+            }
+
+            handleTouchMove(event) {
+                if (!this.joystickData.active) return;
+                event.preventDefault();
+                const touch = event.touches[0];
+                const joystick = document.getElementById("joystick");
+                const joystickRect = joystick.getBoundingClientRect();
+
+                const deltaX = touch.clientX - this.joystickData.startX;
+                const deltaY = touch.clientY - this.joystickData.startY;
+                const distance = Math.sqrt(deltaX * deltaX + deltaY * deltaY);
+
+                // Limit the joystick's movement radius
+                const maxRadius = joystickRect.width / 2;
+                if (distance > maxRadius) {
+                    const angle = Math.atan2(deltaY, deltaX);
+                    this.joystickData.currentX = this.joystickData.startX + maxRadius * Math.cos(angle);
+                    this.joystickData.currentY = this.joystickData.startY + maxRadius * Math.sin(angle);
+                } else {
+                    this.joystickData.currentX = touch.clientX;
+                    this.joystickData.currentY = touch.clientY;
+                }
+
+                joystick.style.left = `${this.joystickData.currentX - joystickRect.width / 2}px`;
+                joystick.style.top = `${this.joystickData.currentY - joystickRect.height / 2}px`;
+
+                // Use deltaX and deltaY to control your player's movement
+                const deltaXNormalized = deltaX / maxRadius;
+                const deltaYNormalized = deltaY / maxRadius;
+
+                // Adjust player movement based on deltaXNormalized and deltaYNormalized
+                // You can use these values to control player velocity or direction
+            }
+
+            handleTouchEnd(event) {
+                event.preventDefault();
+                this.joystickData.active = false;
+                const joystick = document.getElementById("joystick");
+                joystick.style.left = "50%"; // Reset joystick position
+                joystick.style.top = "50%";
+            }
+
+            // ... (your existing code)
+        
         }
 
         class Zombie {
@@ -595,96 +676,7 @@
         // Start render loop
         render();
 
-        class VirtualJoystick {
-    constructor(containerElement, options = {}) {
-        this.container = containerElement;
-        this.options = {
-            radius: options.radius || 50, // Radius of the joystick area
-            onMove: options.onMove || (() => {}), // Callback function for thumbstick movement
-        };
 
-        this.thumbstick = document.createElement("div");
-        this.thumbstick.className = "thumbstick";
-        this.container.appendChild(this.thumbstick);
-
-        this.isTouched = false;
-        this.touchStartPos = { x: 0, y: 0 };
-        this.thumbstickPos = { x: 0, y: 0 };
-
-        this.setupEventListeners();
-    }
-
-    setupEventListeners() {
-        this.thumbstick.addEventListener("touchstart", this.handleTouchStart.bind(this));
-        this.thumbstick.addEventListener("touchmove", this.handleTouchMove.bind(this));
-        this.thumbstick.addEventListener("touchend", this.handleTouchEnd.bind(this));
-    }
-
-    handleTouchStart(event) {
-        event.preventDefault();
-        this.isTouched = true;
-        const touch = event.touches[0];
-        this.touchStartPos.x = touch.clientX;
-        this.touchStartPos.y = touch.clientY;
-        this.thumbstick.style.transition = "none"; // Disable transition for instant response
-    }
-
-    handleTouchMove(event) {
-        event.preventDefault();
-        if (this.isTouched) {
-            const touch = event.touches[0];
-            const deltaX = touch.clientX - this.touchStartPos.x;
-            const deltaY = touch.clientY - this.touchStartPos.y;
-            const distance = Math.sqrt(deltaX * deltaX + deltaY * deltaY);
-
-            if (distance <= this.options.radius) {
-                // Move the thumbstick
-                this.thumbstick.style.transform = `translate(${deltaX}px, ${deltaY}px)`;
-                this.thumbstickPos.x = deltaX / this.options.radius;
-                this.thumbstickPos.y = deltaY / this.options.radius;
-                // Callback for thumbstick movement
-                this.options.onMove(this.thumbstickPos);
-            } else {
-                // Limit the thumbstick's movement within its radius
-                const angle = Math.atan2(deltaY, deltaX);
-                const limitedX = Math.cos(angle) * this.options.radius;
-                const limitedY = Math.sin(angle) * this.options.radius;
-                this.thumbstick.style.transform = `translate(${limitedX}px, ${limitedY}px)`;
-                this.thumbstickPos.x = limitedX / this.options.radius;
-                this.thumbstickPos.y = limitedY / this.options.radius;
-                // Callback for thumbstick movement
-                this.options.onMove(this.thumbstickPos);
-            }
-        }
-    }
-
-    handleTouchEnd(event) {
-        event.preventDefault();
-        this.isTouched = false;
-        this.thumbstick.style.transition = "transform 0.2s ease"; // Restore transition
-        this.thumbstick.style.transform = "translate(0px, 0px)"; // Reset thumbstick position
-        this.thumbstickPos = { x: 0, y: 0 };
-        // Callback when thumbstick is released (optional)
-        // this.options.onRelease();
-    }
-}
-
-// Get the joystick container element
-const joystickContainer = document.getElementById("joystick-container");
-
-// Create a VirtualJoystick instance
-const joystick = new VirtualJoystick(joystickContainer, {
-    radius: 50, // Adjust the radius as needed
-    onMove: (thumbstickPos) => {
-        // Handle player movement based on thumbstickPos
-        // You can update the player's velocity or direction here
-        // Example:
-        gameManager.player.input.left = thumbstickPos.x < -0.5;
-        gameManager.player.input.right = thumbstickPos.x > 0.5;
-        gameManager.player.input.up = thumbstickPos.y > 0.5;
-        gameManager.player.input.down = thumbstickPos.y < -0.5;
-    },
-});
     </script>
 </body>
 
